--- a/environment.yml
+++ b/environment.yml
@@ -6,24 +6,153 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
+  - blas=1.0=mkl
   - bzip2=1.0.8=h5eee18b_6
+  - c-ares=1.19.1=h5eee18b_0
   - ca-certificates=2024.11.26=h06a4308_0
+  - cairo=1.16.0=hb05425b_5
+  - cyrus-sasl=2.1.28=h52b45da_1
+  - dbus=1.13.18=hb2f20db_0
+  - eigen=3.4.0=hdb19cb5_0
+  - expat=2.6.4=h6a678d5_0
+  - ffmpeg=4.2.2=h20bf706_0
+  - filelock=3.13.1=py311h06a4308_0
+  - fontconfig=2.14.1=h55d465d_3
+  - freetype=2.12.1=h4a9f257_0
+  - fsspec=2024.6.1=py311h06a4308_0
+  - glib=2.78.4=h6a678d5_0
+  - glib-tools=2.78.4=h6a678d5_0
+  - gmp=6.2.1=h295c915_3
+  - gmpy2=2.1.2=py311hc9b5ff0_0
+  - gnutls=3.6.15=he1e5248_0
+  - graphite2=1.3.14=h295c915_1
+  - gst-plugins-base=1.14.1=h6a678d5_1
+  - gstreamer=1.14.1=h5eee18b_1
+  - harfbuzz=4.3.0=hf52aaf7_2
+  - hdf5=1.12.1=h2b7332f_3
+  - icu=73.1=h6a678d5_0
+  - intel-openmp=2023.1.0=hdb19cb5_46306
+  - jinja2=3.1.4=py311h06a4308_1
+  - jpeg=9e=h5eee18b_3
+  - krb5=1.20.1=h143b758_1
+  - lame=3.100=h7b6447c_0
+  - lcms2=2.16=hb9589c4_0
   - ld_impl_linux-64=2.40=h12ee557_0
+  - lerc=4.0.0=h6a678d5_0
+  - libabseil=20240116.2=cxx17_h6a678d5_0
+  - libclang=14.0.6=default_hc6dbbc7_2
+  - libclang13=14.0.6=default_he11475f_2
+  - libcups=2.4.2=h2d74bed_1
+  - libcurl=8.11.1=hc9e6f67_0
+  - libdeflate=1.22=h5eee18b_0
+  - libedit=3.1.20230828=h5eee18b_0
+  - libev=4.33=h7f8727e_1
   - libffi=3.4.4=h6a678d5_1
   - libgcc-ng=11.2.0=h1234567_1
+  - libgfortran-ng=11.2.0=h00389a5_1
+  - libgfortran5=11.2.0=h1234567_1
+  - libglib=2.78.4=hdc74915_0
   - libgomp=11.2.0=h1234567_1
+  - libiconv=1.16=h5eee18b_3
+  - libidn2=2.3.4=h5eee18b_0
+  - libllvm14=14.0.6=hecde1de_4
+  - libnghttp2=1.57.0=h2d74bed_0
+  - libopus=1.3.1=h5eee18b_1
+  - libpng=1.6.39=h5eee18b_0
+  - libpq=17.2=hdbd6064_0
+  - libprotobuf=4.25.3=he621ea3_0
+  - libssh2=1.11.1=h251f7ec_0
   - libstdcxx-ng=11.2.0=h1234567_1
+  - libtasn1=4.19.0=h5eee18b_0
+  - libtiff=4.5.1=hffd6297_1
+  - libunistring=0.9.10=h27cfd23_0
   - libuuid=1.41.5=h5eee18b_0
+  - libvpx=1.7.0=h439df22_0
+  - libwebp-base=1.3.2=h5eee18b_1
+  - libxcb=1.15=h7f8727e_0
+  - libxkbcommon=1.0.1=h097e994_2
+  - libxml2=2.13.5=hfdd30dd_0
+  - lz4-c=1.9.4=h6a678d5_1
+  - markupsafe=2.1.3=py311h5eee18b_0
+  - mkl=2023.1.0=h213fc3f_46344
+  - mkl-service=2.4.0=py311h5eee18b_1
+  - mkl_fft=1.3.11=py311h5eee18b_0
+  - mkl_random=1.2.8=py311ha02d727_0
+  - mpc=1.1.0=h10f8cd9_1
+  - mpfr=4.0.2=hb69a4c5_1
+  - mpmath=1.3.0=py311h06a4308_0
+  - mysql=8.4.0=h29a9f33_1
   - ncurses=6.4=h6a678d5_0
-  - openssl=1.1.1w=h7f8727e_0
+  - nettle=3.7.3=hbbd107a_1
+  - networkx=3.3=py311h06a4308_0
+  - numpy=1.26.4=py311h08b1b3b_0
+  - numpy-base=1.26.4=py311hf175353_0
+  - opencv=4.10.0=py311hab19f7d_0
+  - openh264=2.1.1=h4ff587b_0
+  - openjpeg=2.5.2=he7f1fd0_0
+  - openldap=2.6.4=h42fbc30_0
+  - openssl=3.0.15=h5eee18b_0
+  - pcre2=10.42=hebb0a14_1
+  - pillow=11.0.0=py311hcea889d_1
   - pip=24.2=py311h06a4308_0
-  - python=3.11.0=h7a1cb2a_3
+  - pixman=0.40.0=h7f8727e_1
+  - python=3.11.11=he870216_0
+  - qt-main=5.15.2=hb6262e9_11
   - readline=8.2=h5eee18b_0
   - setuptools=75.1.0=py311h06a4308_0
   - sqlite=3.45.3=h5eee18b_0
+  - tbb=2021.8.0=hdb19cb5_0
   - tk=8.6.14=h39e8969_0
-  - tzdata=2024b=h04d1e81_0
+  - typing_extensions=4.12.2=py311h06a4308_0
   - wheel=0.44.0=py311h06a4308_0
+  - x264=1!157.20191217=h7b6447c_0
   - xz=5.4.6=h5eee18b_1
   - zlib=1.2.13=h5eee18b_1
+  - zstd=1.5.6=hc292b87_0
+  - pip:
+      - certifi==2024.12.14
+      - charset-normalizer==3.4.1
+      - contourpy==1.3.1
+      - cycler==0.12.1
+      - fonttools==4.55.3
+      - gitdb==4.0.12
+      - gitpython==3.1.44
+      - idna==3.10
+      - kiwisolver==1.4.8
+      - matplotlib==3.10.0
+      - nvidia-cublas-cu12==12.4.5.8
+      - nvidia-cuda-cupti-cu12==12.4.127
+      - nvidia-cuda-nvrtc-cu12==12.4.127
+      - nvidia-cuda-runtime-cu12==12.4.127
+      - nvidia-cudnn-cu12==9.1.0.70
+      - nvidia-cufft-cu12==11.2.1.3
+      - nvidia-curand-cu12==10.3.5.147
+      - nvidia-cusolver-cu12==11.6.1.9
+      - nvidia-cusparse-cu12==12.3.1.170
+      - nvidia-nccl-cu12==2.21.5
+      - nvidia-nvjitlink-cu12==12.4.127
+      - nvidia-nvtx-cu12==12.4.127
+      - packaging==24.2
+      - pandas==2.2.3
+      - psutil==6.1.1
+      - py-cpuinfo==9.0.0
+      - pyparsing==3.2.1
+      - python-dateutil==2.9.0.post0
+      - pytz==2024.2
+      - pyyaml==6.0.2
+      - requests==2.32.3
+      - scipy==1.15.0
+      - seaborn==0.13.2
+      - six==1.17.0
+      - smmap==5.0.2
+      - sympy==1.13.1
+      - thop==0.1.1-2209072238
+      - torch==2.5.1
+      - torchvision==0.20.1
+      - tqdm==4.67.1
+      - triton==3.1.0
+      - tzdata==2024.2
+      - ultralytics==8.3.58
+      - ultralytics-thop==2.0.13
+      - urllib3==2.3.0
 prefix: /home/willis/anaconda3/envs/my_AI_game_hack
